Add index information and structure

--- a/index.html
+++ b/index.html
@@ -4,6 +4,119 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./dist/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="container--header">
+      <nav class="container--nav">
+        <h2>pastashule</h2>
+        <div class="container__icons">icon</div>
+      </nav>
+      <div>
+        <h3>PASTA SHULE.. YOUR GATEAWAY TO SCHOOLS IN KENYA.</h3>
+        <form>
+          <h4>Search for clinic:</h4>
+          <input type="text" />
+          <button type="button">Search</button>
+        </form>
+        <button>how it works</button>
+      </div>
+    </header>
+
+    <main class="container--main">
+      <h5>PASTA SHULE WORKS IN FOUR SIMPLE STEPS</h5>
+      <article class="container__article">
+        <h6>SEARCH</h6>
+        <p>
+          Its simple. On pata shule homepage, enter the name of a school you are
+          looking for and click on search. Alternatively click on the search
+          link on the top menu to view the list of all schools.
+        </p>
+      </article>
+      <article class="container__article">
+        <h6>LOCATE</h6>
+        <p>
+          Get to see where the school is located by clicking on the school
+          profile. Its even more exciting. You can get the directions from
+          anywhere in the country
+        </p>
+      </article>
+      <article class="container__article">
+        <h6>APPLY</h6>
+        <p>
+          Apply for you childs interview to the school of your choice. Click on
+          the APPLY button to get the application form. We also follow up on the
+          application to make sure you get a reply on time.
+        </p>
+      </article>
+      <article class="container__article">
+        <h6>RELAX</h6>
+        <p>
+          Once your child gets admitted. You can now relax. You can check out
+          our blog to see what we recommend when school hunting.
+        </p>
+      </article>
+
+      <section class="container--section">
+        <h6>Over 10,000 schools registered with us</h6>
+        <p>Find a school by using our filtered search engine</p>
+        <button>Find a school</button>
+        <img src="" alt="" />
+      </section>
+
+      <section class="container--section">
+        <h6>No need to take 3 Matatus to find a school in the country</h6>
+        <p>Just press or click on the search button and Youre all ser</p>
+        <button>Find a school near you</button>
+        <img src="" alt="" />
+      </section>
+
+      <section class="container--section">
+        <h6>Anytime Anywhere Any way!</h6>
+        <p>
+          Very convenient platforms that cut across any device including our
+          mobile ready web app adn our mobile app coming soon to your app store
+        </p>
+
+        <img src="" alt="" />
+      </section>
+    </main>
+
+    <footer class="container--footer">
+      <div class="footer__media">
+        <ul>
+          <li>HOME</li>
+          <li>SEARCH</li>
+          <li>ABOUT US</li>
+          <li>ADVERTISE</li>
+          <li>FACEBOOK</li>
+          <li>TWITTER</li>
+          <li>BLOG</li>
+          <li>GOOGLE +</li>
+        </ul>
+      </div>
+
+      <form class="subs" class="footer__details">
+        <h3>SUBS</h3>
+        <input type="text" />
+        <button>Send</button>
+      </form>
+
+      <article class="footer__contact">
+        <h3>CONCTAC</h3>
+        <p>contact us at: info@patashule.com</p>
+      </article>
+      <article class="footer__about">
+        <h3>ABOUT</h3>
+        <p>The Biggest online school search engine in Kenya</p>
+      </article>
+      <div class="footer__icons">
+        <div class="facebook"></div>
+        <div class="twitter"></div>
+        <div class="instagram"></div>
+        <div class="pinterest"></div>
+        <h6>@2020 Heber Lazo - All Rights Reserved</h6>
+      </div>
+    </footer>
+  </body>
 </html>
