--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./dist/reset.css" />
     <link rel="stylesheet" href="./dist/style.css" />
   </head>
   <body>
-    <header class="container--header">
-      <nav class="container--nav">
+    <header class="header">
+      <nav class="header__nav">
         <h2>pastashule</h2>
-        <div class="container__icons">icon</div>
+        <div class="header__icons">icon</div>
       </nav>
-      <div>
+      <div class="header__search">
         <h3>PASTA SHULE.. YOUR GATEAWAY TO SCHOOLS IN KENYA.</h3>
-        <form>
+        <form class="header__form">
           <h4>Search for clinic:</h4>
           <input type="text" />
           <button type="button">Search</button>
