Fixing background display

--- a/index.html
+++ b/index.html
@@ -11,7 +11,33 @@
     <header class="header">
       <nav class="header__nav">
         <h2>pastashule</h2>
-        <div class="header__icons">icon</div>
+        <ul class="header__links">
+          <li>
+            <i
+              onclick="location.href='search.html';"
+              class="fas fa-search-location"
+            ></i>
+            <strong>
+              <a class="header-links-text" href="search.html">Clinics</a>
+            </strong>
+          </li>
+          <li>
+            <i onclick="location.href='#about-us';" class="far fa-user"></i>
+            <strong>
+              <a class="header-links-text" href="#about-us">About</a>
+            </strong>
+          </li>
+          <li>
+            <i class="fas fa-rss"></i>
+            <strong> <a href="#">Blog</a> </strong>
+          </li>
+          <li>
+            <i onclick="location.href='index.html';" class="fas fa-bars"></i>
+            <strong>
+              <a class="header-links-text" href="index.html">Home</a>
+            </strong>
+          </li>
+        </ul>
       </nav>
       <div class="header__search">
         <h3>PASTA SHULE.. YOUR GATEAWAY TO SCHOOLS IN KENYA.</h3>
@@ -119,5 +145,10 @@
         <h6>@2020 Heber Lazo - All Rights Reserved</h6>
       </div>
     </footer>
+
+    <script
+      src="https://kit.fontawesome.com/a4590f3e3a.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
