add font family

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="./dist/reset.css" />
     <link rel="stylesheet" href="./dist/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
