--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
         <form class="header__search__form">
           <h4>SEARCH BY KEYWORD:</h4>
           <input type="text" />
-          <button type="button">Search</button>
+          <button type="button">SEARCH</button>
         </form>
-        <button class="header__button">how it works</button>
+
+        <button class="header__button">How it works</button>
       </div>
     </header>
 
     <main class="container--main">
       <h5>PASTA SHULE WORKS IN FOUR SIMPLE STEPS</h5>
       <article class="container__article">
+        <img src="" alt="" />
         <h6>SEARCH</h6>
         <p>
           Its simple. On pata shule homepage, enter the name of a school you are
@@ -57,6 +59,7 @@
         </p>
       </article>
       <article class="container__article">
+        <img src="" alt="" />
         <h6>LOCATE</h6>
         <p>
           Get to see where the school is located by clicking on the school
@@ -65,6 +68,7 @@
         </p>
       </article>
       <article class="container__article">
+        <img src="" alt="" />
         <h6>APPLY</h6>
         <p>
           Apply for you childs interview to the school of your choice. Click on
@@ -73,6 +77,7 @@
         </p>
       </article>
       <article class="container__article">
+        <img src="" alt="" />
         <h6>RELAX</h6>
         <p>
           Once your child gets admitted. You can now relax. You can check out
