--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
       </nav>
       <div class="header__search">
+        <i class="fas fa-map-marker-alt"></i>
         <h3>PASTA SHULE.. YOUR GATEAWAY TO SCHOOLS IN KENYA.</h3>
         <form class="header__search__form">
           <h4>SEARCH BY KEYWORD:</h4>
@@ -544,29 +545,33 @@
       </section>
     </main>
 
-    <footer class="container--footer">
+    <footer class="footer">
       <div class="footer__media">
-        <ul>
-          <li>HOME</li>
-          <li>SEARCH</li>
-          <li>ABOUT US</li>
-          <li>ADVERTISE</li>
-          <li>FACEBOOK</li>
-          <li>TWITTER</li>
-          <li>BLOG</li>
-          <li>GOOGLE +</li>
-        </ul>
+        <div>
+          <span>HOME</span>
+          <span>SEARCH</span>
+          <span>ABOUT US</span>
+          <span>ADVERTISE</span>
+        </div>
+        <div>
+          <span>FACEBOOK</span>
+          <span>TWITTER</span>
+          <span>BLOG</span>
+          <span>GOOGLE +</span>
+        </div>
       </div>
 
-      <form class="subs" class="footer__details">
-        <h3>SUBS</h3>
-        <input type="text" />
-        <button>Send</button>
-      </form>
+      <div class="footer__form">
+        <h3>SUBSCRIPTION</h3>
+        <form action="">
+          <input type="text" placeholder="your@email.com" />
+          <button>Send</button>
+        </form>
+      </div>
 
       <article class="footer__contact">
-        <h3>CONCTAC</h3>
-        <p>contact us at: info@patashule.com</p>
+        <h3>CONTACT</h3>
+        <p>Contact us at: info@patashule.com</p>
       </article>
       <article class="footer__about">
         <h3>ABOUT</h3>
