Fixed nav bar margins

--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
   <body>
     <header class="header">
       <nav class="header__nav">
-        <h2>pastashule</h2>
+        <h2>
+          <i class="fas fa-map-marker-alt"></i>
+
+          pastashule
+        </h2>
         <div class="header__links">
           <span>
             <i class="fas fa-search-location"></i>
+
             <a class="header-links-text" href="search.html">Clinics</a>
           </span>
           <span>
@@ -36,7 +41,6 @@
         </div>
       </nav>
       <div class="header__search">
-        <i class="fas fa-map-marker-alt"></i>
         <h3>PASTA SHULE.. YOUR GATEAWAY TO SCHOOLS IN KENYA.</h3>
         <form class="header__search__form">
           <h4>SEARCH BY KEYWORD:</h4>
