Added icons in footer

--- a/index.html
+++ b/index.html
@@ -525,9 +525,11 @@
       </article>
 
       <section class="main__section section1">
-        <h6>Over 10,000 schools registered with us</h6>
-        <p>Find a school by using our filtered search engine</p>
-        <button>Find a school</button>
+        <article>
+          <h6>Over 10,000 schools registered with us</h6>
+          <p>Find a school by using our filtered search engine</p>
+          <button>Find a school</button>
+        </article>
         <?xml version="1.0" encoding="iso-8859-1"?>
         <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
         <svg
@@ -648,9 +650,11 @@
       </section>
 
       <section class="main__section section2">
-        <h6>No need to take 3 Matatus to find a school in the country</h6>
-        <p>Just press or click on the search button and Youre all ser</p>
-        <button>Find a school near you</button>
+        <article>
+          <h6>No need to take 3 Matatus to find a school in the country</h6>
+          <p>Just press or click on the search button and Youre all ser</p>
+          <button>Find a school near you</button>
+        </article>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -679,11 +683,11 @@
               y2="391.32"
               gradientUnits="userSpaceOnUse"
             >
-              <stop offset="0" stop-color="#c27317" />
-              <stop offset="0.2" stop-color="#d38a16" />
-              <stop offset="0.53" stop-color="#ebaa15" />
-              <stop offset="0.81" stop-color="#f9be14" />
-              <stop offset="1" stop-color="#fec514" />
+              <stop offset="0" stop-color="#e6ac5b" />
+              <stop offset="0.2" stop-color="#e6ac5b" />
+              <stop offset="0.53" stop-color="#e6ac5b" />
+              <stop offset="0.81" stop-color="#e6ac5b" />
+              <stop offset="1" stop-color="#e6ac5b" />
             </linearGradient>
           </defs>
           <title>coffee</title>
@@ -723,11 +727,14 @@
       </section>
 
       <section class="main__section section3">
-        <h6>Anytime Anywhere Any way!</h6>
-        <p>
-          Very convenient platforms that cut across any device including our
-          mobile ready web app adn our mobile app coming soon to your app store
-        </p>
+        <article>
+          <h6>Anytime Anywhere Any way!</h6>
+          <p>
+            Very convenient platforms that cut across any device including our
+            mobile ready web app adn our mobile app coming soon to your app
+            store
+          </p>
+        </article>
         <?xml version="1.0" encoding="utf-8"?>
         <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
         <svg
@@ -1894,6 +1901,10 @@
           <span>ADVERTISE</span>
         </div>
         <div>
+          <p><i class="fas fa-map-marker-alt"></i></p>
+        </div>
+
+        <div>
           <span>FACEBOOK</span>
           <span>TWITTER</span>
           <span>BLOG</span>
@@ -1918,10 +1929,12 @@
         <p>The Biggest online school search engine in Kenya</p>
       </article>
       <div class="footer__icons">
-        <div class="facebook"></div>
-        <div class="twitter"></div>
-        <div class="instagram"></div>
-        <div class="pinterest"></div>
+        <div>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-pinterest-p"></i>
+        </div>
         <h6>@2020 Heber Lazo - All Rights Reserved</h6>
       </div>
     </footer>
