Add container transitio

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </nav>
       <div class="header__search">
-        <h3>PASTA SHULE.. YOUR GATEAWAY TO SCHOOLS IN KENYA.</h3>
+        <h3>THERE IS NO OTHER PLACE LIKE HOME</h3>
         <form class="header__search__form">
           <h4>SEARCH BY KEYWORD:</h4>
           <input type="text" />
@@ -117,6 +117,7 @@
           link on the top menu to view the list of all schools.
         </p>
       </article>
+
       <article class="main__article">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145 145">
           <defs>
@@ -212,6 +213,7 @@
           anywhere in the country
         </p>
       </article>
+
       <article class="main__article">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145 145">
           <defs>
@@ -361,6 +363,7 @@
           application to make sure you get a reply on time.
         </p>
       </article>
+
       <article class="main__article">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145 145">
           <defs>
