--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       <nav class="header__nav">
         <h2>
           <i class="fas fa-map-marker-alt"></i>
-
-          pastashule
+          HOME
         </h2>
         <div class="header__links">
           <span>
