--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="header__search">
         <h3>THERE IS NO OTHER PLACE LIKE HOME</h3>
         <form class="header__search__form">
-          <h4>SEARCH BY KEYWORD:</h4>
+          <h4>SEARCH FOR YOUR DREAM HOUSE:</h4>
           <input type="text" />
           <button type="button">SEARCH</button>
         </form>
@@ -52,7 +52,7 @@
     </header>
 
     <main class="main">
-      <h5>PASTA SHULE WORKS IN FOUR SIMPLE STEPS</h5>
+      <h5>HOME WORKS IN FOUR SIMPLE STEPS</h5>
       <article class="main__article">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145 145">
           <defs>
