Add margin details main-container

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <main class="main">
         <h5>HOME WORKS IN FOUR SIMPLE STEPS</h5>
-        <div class="main__container">
+        <div class="main__box">
           <article class="main__article">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145 145">
               <defs>
