Add less files for search.html

--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./dist/reset.css" />
-    <link rel="stylesheet" href="./dist/style.css" />
+    <link rel="stylesheet" href="./dist/style-search.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
@@ -41,10 +41,6 @@
           </div>
         </nav>
       </header>
-
-      <main class="main">
-        <div class="main__box"></div>
-      </main>
 
       <footer class="footer">
         <div class="footer__media">
