Add assets and styling

--- a/search.html
+++ b/search.html
@@ -89,7 +89,9 @@
           </form>
         </div>
 
-        <div class="carousel">
+        <div class="carousel--container">
+          <h4>HOT SALE</h4>
+
           <div
             id="carouselExampleCaptions"
             class="carousel slide"
@@ -106,31 +108,36 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="..." />
+                <img
+                  src="./assets/beach.jpeg"
+                  class="d-block w-100"
+                  alt="beach-house"
+                />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>
-                    Nulla vitae elit libero, a pharetra augue mollis interdum.
-                  </p>
+                  <h5>Beach House</h5>
+                  <p>How about weaking up to the sun everymorning?</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="..." />
+                <img
+                  src="./assets/country.jpg"
+                  class="d-block w-100"
+                  alt="country-house"
+                />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  </p>
+                  <h5>Feel in touch with nature?</h5>
+                  <p>There is no better air than the countryside</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="..." />
+                <img
+                  src="./assets/apartment.jpg"
+                  class="d-block w-100"
+                  alt="apartment-house"
+                />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>
-                    Praesent commodo cursus magna, vel scelerisque nisl
-                    consectetur.
-                  </p>
+                  <h5>Like the city?</h5>
+                  <p>Feeling the rush</p>
                 </div>
               </div>
             </div>
