Add style carousel text

--- a/search.html
+++ b/search.html
@@ -109,12 +109,12 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="./assets/beach.jpeg"
+                  src="./assets/beach.jpg"
                   class="d-block w-100"
                   alt="beach-house"
                 />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Beach House</h5>
+                  <h2>Beach House</h2>
                   <p>How about weaking up to the sun everymorning?</p>
                 </div>
               </div>
@@ -125,7 +125,7 @@
                   alt="country-house"
                 />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Feel in touch with nature?</h5>
+                  <h2>Feel in touch with nature?</h2>
                   <p>There is no better air than the countryside</p>
                 </div>
               </div>
@@ -136,7 +136,7 @@
                   alt="apartment-house"
                 />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Like the city?</h5>
+                  <h2>Like the city?</h2>
                   <p>Feeling the rush</p>
                 </div>
               </div>
