Add search bar responsive design

--- a/search.html
+++ b/search.html
@@ -76,7 +76,7 @@
             </label>
 
             <label for="rooms"
-              >Choose the number of rooms:
+              >Number of rooms:
               <select id="rooms">
                 <option value="one">1</option>
                 <option value="two">2</option>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="carousel--container">
-          <h4>HOT SALE</h4>
+          <h4>CHOOSE YOUR LIFE STILE</h4>
 
           <div
             id="carouselExampleCaptions"
