Corrected input footer

--- a/search.html
+++ b/search.html
@@ -55,10 +55,10 @@
           <form class="form">
             <label
               >City
-              <input type="text" placeholder="Where do you want to live?" />
+              <input type="text" placeholder="Name of city?" />
             </label>
             <label for="home"
-              >What kind of home:
+              >What kind of house:
 
               <select id="home">
                 <option value="house">House</option>
@@ -190,9 +190,9 @@
         <div class="footer__container">
           <div class="footer__form">
             <h3>SUBSCRIPTION</h3>
-            <form action="">
-              <input type="text" placeholder="your@email.com" />
-              <button>Send</button>
+            <form>
+              <input class="input" type="text" placeholder="your@email.com" />
+              <button class="button">Send</button>
             </form>
           </div>
 
