Add properties to iframe

--- a/details.html
+++ b/details.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="map">
-          <h5></h5>
+          <h5>Pick your place</h5>
           <iframe
             class="map-frame"
             src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(clinic%20address)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
