--- a/details.html
+++ b/details.html
@@ -44,6 +44,8 @@
 
       <main class="main">
         <div class="info">
+          <h4>You can reach us at:</h4>
+
           <div class="info__box">
             <p>Phone Number <span class="span">+51-980687-287</span></p>
           </div>
@@ -64,12 +66,19 @@
           </div>
         </div>
 
-        <div class="map">
-          <h5>Pick your place</h5>
-          <iframe
-            class="map-frame"
-            src="https://maps.google.com/maps?width=100%25&amp;height=300&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(clinic%20address)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-          ></iframe>
+        <div class="mapouter">
+          <div class="gmap_canvas">
+            <iframe
+              width="600"
+              height="500"
+              id="gmap_canvas"
+              src="https://maps.google.com/maps?q=playa%20hermosa&t=k&z=13&ie=UTF8&iwloc=&output=embed"
+              frameborder="0"
+              scrolling="no"
+              marginheight="0"
+              marginwidth="0"
+            ></iframe>
+          </div>
         </div>
       </main>
 
@@ -120,6 +129,7 @@
         </div>
       </footer>
     </div>
+
     <script
       src="https://kit.fontawesome.com/a4590f3e3a.js"
       crossorigin="anonymous"
