Fix assets file

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           <form class="header__search__form">
             <h4>SEARCH FOR YOUR DREAM HOUSE:</h4>
             <input type="text" />
-            <button type="button">SEARCH</button>
+            <button type="button" onclick="location.href='search.html'">SEARCH</button>
+              
+            </button>
           </form>
 
           <button class="header__button">How it works</button>
