Fix html errors

--- a/search.html
+++ b/search.html
@@ -67,9 +67,9 @@
               </select>
             </label>
 
-            <label for="home"
+            <label for="rent"
               >Rent or Buy:
-              <select id="home">
+              <select id="rent">
                 <option value="house">Rent</option>
                 <option value="Apartment">Buy</option>
               </select>
@@ -192,7 +192,7 @@
             <h3>SUBSCRIPTION</h3>
             <form>
               <input class="input" type="text" placeholder="your@email.com" />
-              <button class="button">Send</button>
+              <button type="button" class="button">Send</button>
             </form>
           </div>
 
