--- a/details.html
+++ b/details.html
@@ -72,10 +72,6 @@
             height="500"
             id="gmap_canvas"
             src="https://maps.google.com/maps?q=playa%20hermosa&t=k&z=13&ie=UTF8&iwloc=&output=embed"
-            frameborder="0"
-            scrolling="no"
-            marginheight="0"
-            marginwidth="0"
           ></iframe>
         </div>
       </main>
@@ -101,9 +97,9 @@
         <div class="footer__container">
           <div class="footer__form">
             <h3>SUBSCRIPTION</h3>
-            <form action="">
+            <form>
               <input type="text" placeholder="your@email.com" />
-              <button>Send</button>
+              <button type="button">Send</button>
             </form>
           </div>
 
