--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           <form class="header__search__form">
             <h4>SEARCH FOR YOUR DREAM HOUSE:</h4>
             <input type="text" />
-            <button type="button" onclick="location.href='search.html'">SEARCH</button>
-              
+            <button type="button" onclick="location.href='search.html'">
+              SEARCH
             </button>
           </form>
 
-          <button class="header__button">How it works</button>
+          <button type="button" class="header__button">How it works</button>
         </div>
       </header>
 
@@ -149,8 +149,8 @@
                 </style>
               </defs>
               <title>Asset 5</title>
-              <g id="Layer_2" data-name="Layer 2">
-                <g id="objects">
+              <g id="Layer_5" data-name="Layer 5">
+                <g id="objects2">
                   <circle class="cls-1" cx="72.5" cy="72.5" r="72.5" />
                   <path
                     class="cls-2"
@@ -246,8 +246,8 @@
                 </style>
               </defs>
               <title>Asset 2</title>
-              <g id="Layer_2" data-name="Layer 2">
-                <g id="objects">
+              <g id="Layer_9" data-name="Layer 9">
+                <g id="objects9">
                   <circle class="cls-1" cx="72.5" cy="72.5" r="72.5" />
                   <rect
                     class="cls-2"
@@ -389,8 +389,8 @@
                 </style>
               </defs>
               <title>Asset 9</title>
-              <g id="Layer_2" data-name="Layer 2">
-                <g id="objects">
+              <g id="Layer_8" data-name="Layer 8">
+                <g id="objects8">
                   <circle class="cls-1" cx="72.5" cy="72.5" r="72.5" />
                   <rect
                     class="cls-2"
@@ -534,9 +534,9 @@
           <article>
             <h6>Over 100,000 Users registered with us</h6>
             <p>Find a your own place by using our filtered search engine</p>
-            <button>Find a Home</button>
+            <button type="button">Find a Home</button>
           </article>
-          <?xml version="1.0" encoding="iso-8859-1"?>
+
           <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <svg
             version="1.1"
@@ -662,7 +662,7 @@
               meantime.
             </h6>
             <p>Just press or click on the search button and Youre all set</p>
-            <button>Find your place</button>
+            <button type="button">Find your place</button>
           </article>
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -700,7 +700,7 @@
               </linearGradient>
             </defs>
             <title>coffee</title>
-            <g id="Layer_2" data-name="Layer 2">
+            <g id="Layer_7" data-name="Layer 2">
               <g id="Layer_1-2" data-name="Layer 1">
                 <path
                   class="cls-1"
@@ -744,11 +744,11 @@
               store
             </p>
           </article>
-          <?xml version="1.0" encoding="utf-8"?>
+
           <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <svg
             version="1.1"
-            id="Capa_1"
+            id="Capa_6"
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px"
@@ -1922,9 +1922,9 @@
         <div class="footer__container">
           <div class="footer__form">
             <h3>SUBSCRIPTION</h3>
-            <form action="">
+            <form>
               <input type="text" placeholder="your@email.com" />
-              <button>Send</button>
+              <button type="button">Send</button>
             </form>
           </div>
 
