Add navigation links to footer

--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
       <footer class="footer">
         <div class="footer__media">
           <div>
-            <span>HOME</span>
-            <span>SEARCH</span>
-            <span>ABOUT US</span>
-            <span>ADVERTISE</span>
+            <a href="#"><span>HOME</span></a>
+            <a href="#"><span>SEARCH</span></a>
+            <a href="#"><span>ABOUT US</span></a>
+            <a href="#"><span>ADVERTISE</span></a>
           </div>
           <div class="icon">
             <p><i class="fas fa-map-marker-alt"></i></p>
           </div>
           <div>
-            <span>FACEBOOK</span>
-            <span>TWITTER</span>
-            <span>BLOG</span>
-            <span>GOOGLE +</span>
+            <a href="#"><span>FACEBOOK</span></a>
+            <a href="#"><span>TWITTER</span></a>
+            <a href="#"><span>BLOG</span></a>
+            <a href="#"><span>GOOGLE +</span></a>
           </div>
         </div>
         <div class="footer__container">
@@ -160,7 +160,7 @@
           </div>
 
           <article class="footer__contact">
-            <h3>CONTACT</h3>
+            <a onclick="location.href='details.html'"><h3>CONTACT</h3></a>
             <p>Contact us at: info@patashule.com</p>
           </article>
           <article class="footer__about">
