--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
           <h3>THERE IS NO OTHER PLACE LIKE HOME</h3>
           <form class="header__search__form">
             <h4>SEARCH FOR YOUR DREAM HOUSE:</h4>
-            <input type="text" />
-            <button type="button" onclick="location.href='search.html'">
-              SEARCH
-            </button>
+            <div class="form__btn">
+              <input type="text" />
+              <button type="button" onclick="location.href='search.html'">
+                SEARCH
+              </button>
+            </div>
           </form>
 
           <button type="button" class="header__button">How it works</button>
