Add search result

--- a/search.html
+++ b/search.html
@@ -86,9 +86,39 @@
             </label>
 
             <button type="button">SEARCH</button>
+            <button type="button">CLEAR FILTER</button>
           </form>
         </div>
+        <h5>Search Results Found 3 new locations</h5>
 
+        <div class="card--container">
+          <div class="pics--container">
+            <div class="pics__box">
+              <p>Address : El paraiso #321</p>
+              <p>Rooms: 2</p>
+              <p>Bathrooms: 2</p>
+              <p>Garage : 2 cars</p>
+            </div>
+          </div>
+
+          <div class="pics--container pc2">
+            <div class="pics__box">
+              <p>Address : Las Cascadas #321</p>
+              <p>Rooms: 2</p>
+              <p>Bathrooms: 1.5</p>
+              <p>Garage : 2 cars</p>
+            </div>
+          </div>
+
+          <div class="pics--container pc3">
+            <div class="pics__box">
+              <p>Address : El Caminito #321</p>
+              <p>Rooms: 2</p>
+              <p>Bathrooms: 2</p>
+              <p>Garage : 1 car</p>
+            </div>
+          </div>
+        </div>
         <div class="carousel--container">
           <h4>CHOOSE YOUR LIFE STILE</h4>
 
@@ -172,19 +202,19 @@
       <footer class="footer">
         <div class="footer__media">
           <div>
-            <span>HOME</span>
-            <span>SEARCH</span>
-            <span>ABOUT US</span>
-            <span>ADVERTISE</span>
+            <a href="#"><span>HOME</span></a>
+            <a href="#"><span>SEARCH</span></a>
+            <a href="#"><span>ABOUT US</span></a>
+            <a href="#"><span>ADVERTISE</span></a>
           </div>
           <div class="icon">
             <p><i class="fas fa-map-marker-alt"></i></p>
           </div>
           <div>
-            <span>FACEBOOK</span>
-            <span>TWITTER</span>
-            <span>BLOG</span>
-            <span>GOOGLE +</span>
+            <a href="#"><span>FACEBOOK</span></a>
+            <a href="#"><span>TWITTER</span></a>
+            <a href="#"><span>BLOG</span></a>
+            <a href="#"><span>GOOGLE +</span></a>
           </div>
         </div>
         <div class="footer__container">
@@ -197,7 +227,7 @@
           </div>
 
           <article class="footer__contact">
-            <h3>CONTACT</h3>
+            <a onclick="location.href='details.html'"><h3>CONTACT</h3></a>
             <p>Contact us at: info@patashule.com</p>
           </article>
           <article class="footer__about">
