--- a/details.html
+++ b/details.html
@@ -46,22 +46,22 @@
         <div class="info">
           <h4>You can reach us at:</h4>
 
-          <div class="info__box">
+          <div class="info__box a1">
             <p>Phone Number <span class="span">+51-980687-287</span></p>
           </div>
-          <div class="info__box">
+          <div class="info__box a2">
             <p>Email <span class="span">info@home.org</span></p>
           </div>
-          <div class="info__box">
+          <div class="info__box a3">
             <p>Address: <span class="span">Street-City</span></p>
           </div>
-          <div class="info__box">
+          <div class="info__box a4">
             <p>Fax <span class="span">+51-980687-289</span></p>
           </div>
-          <div class="info__box">
+          <div class="info__box a5">
             <p>Business hours: <span class="span">08:00 to 17:00</span></p>
           </div>
-          <div class="info__box">
+          <div class="info__box a6">
             <p>Working day: <span class="span">Mon-Sat</span></p>
           </div>
         </div>
