Add details page link

--- a/search.html
+++ b/search.html
@@ -92,7 +92,7 @@
         <h5>Search Results Found 3 new locations</h5>
 
         <div class="card--container">
-          <div class="pics--container">
+          <div class="pics--container" onclick="location.href='details.html'">
             <div class="pics__box">
               <p>Address : El paraiso #321</p>
               <p>Rooms: 2</p>
@@ -101,7 +101,10 @@
             </div>
           </div>
 
-          <div class="pics--container pc2">
+          <div
+            class="pics--container pc2"
+            onclick="location.href='details.html'"
+          >
             <div class="pics__box">
               <p>Address : Las Cascadas #321</p>
               <p>Rooms: 2</p>
@@ -110,7 +113,10 @@
             </div>
           </div>
 
-          <div class="pics--container pc3">
+          <div
+            class="pics--container pc3"
+            onclick="location.href='details.html'"
+          >
             <div class="pics__box">
               <p>Address : El Caminito #321</p>
               <p>Rooms: 2</p>
